# ynab-utils

./: .gitignore  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/ynab_utils/: __init__.py  __main__.py  cli.py  dupes.py
tests/: test_dupes.py  test_integration.py
tests/data/: duplicates_exact_same_date.csv  duplicates_fuzzy_payee.csv  duplicates_with_date_filter.csv  duplicates_within_days.csv  no_duplicates.csv  transactions_for_row_numbers.csv  transactions_with_empty_rows.csv  valid_transactions.csv
