[project]
name = "ynab-utils"
version = "0.1.0"
authors = [
    { name = "Dave Konopka", email = "dave.konopka@gmail.com" },
]
description = "A collection of command line utilities for YNAB (You Need a Budget) users."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["ynab", "budgeting", "finance", "cli", "duplicate-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/davekonopka/ynab-utils"
Issues = "https://github.com/davekonopka/ynab-utils/issues"
Repository = "https://github.com/davekonopka/ynab-utils"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
ynab-utils = "ynab_utils.cli:main"

[build-system]
requires = ["hatchling", "uv>=0.12.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
